# ru-study-python

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: main.yml
exercises/: filter_map.py  flask.py  lists.py  map.py
filter_map/: filter_map.py  test_filter_map.py
flask_exercises/: flask_excercises.py  test_flask_excercises.py
lists/: lists.py  test_lists.py
maps/: maps.py  test_maps.py
tests/: pass_test_filter_map.py  pass_test_flask_exercise.py  pass_test_list_exercise.py  pass_test_map_exercise.py
